jaml/examples/invalid/inline_list_nl.jaml
inline_list_nl: [
  1,
  2,
  3,
]
